fix margin overflow-x issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,7 +57,7 @@ body {
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .rounded-text:hover {
+  .rounded-text {
     animation: spin 6s infinite linear;
   }
 
